objects/Deal_Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <inlineHelpText>Please provide additional details on what is needed to support this request?</inlineHelpText>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Champion_Identified__c</fullName>
        <label>Champion Identified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compelling_Event_for_Business_Case__c</fullName>
        <label>Compelling Event for Business Case</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Environment__c</fullName>
        <label>Competitive Environment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Pain_Points__c</fullName>
        <label>Customer Pain Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Benefits_from_HP__c</fullName>
        <label>Expected Benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance_Terns__c</fullName>
        <label>Finance Terns</label>
        <picklist>
            <picklistValues>
                <fullName>0-6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-9 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-12 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gained_Executive_Sponsorship__c</fullName>
        <label>Gained Executive Sponsorship?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Metrics__c</fullName>
        <label>Key Metrics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Support Requests</relationshipLabel>
        <relationshipName>Deal_Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Industry__c</fullName>
        <label>Other Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Sales_Members_to_Include__c</fullName>
        <inlineHelpText>Who else involved with your opportunity should be included in this request (VP, PM, etc)</inlineHelpText>
        <label>Other Sales Members to Include</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Sales_Team_Members_to_Include__c</fullName>
        <inlineHelpText>Who else involved in your opportunity should be included in this request (AVP, SVP, etc)</inlineHelpText>
        <label>Other Sales Team Members to Include</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Questions__c</fullName>
        <inlineHelpText>What are some potential questions your prospect will ask?</inlineHelpText>
        <label>Potential Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Objectives__c</fullName>
        <inlineHelpText>What does your prospect expect to get out of this call?</inlineHelpText>
        <label>Primary Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Call_Attendees__c</fullName>
        <inlineHelpText>Please list names and titles of people at your prospects company who will attend the call</inlineHelpText>
        <label>Reference Call Attendees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Type__c</fullName>
        <label>Reference Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Reference Call</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reference Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference Collateral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Industry__c</fullName>
        <label>Requested Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi Tech Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi Tech Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil and Gas/Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Product_Expertise__c</fullName>
        <label>Requested Product Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>HP ProLiant DL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP ProLiant ML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP ProLiant BL blades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP ProLiant SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP ProLiant MicroServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Integrity Superdome servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Integrity Server blades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Integrity Rack servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP NonStop servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Integrity NonStop BladeSystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Integrity NonStop servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtualization Software ProLiant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows® on Integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux on Integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP-UX 11i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NonStop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpenVMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP BladeSystem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProLiant storage servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Qualified Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rack and Power infrastructure products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data center monitoring system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Insight Management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Requested_Timeframe__c</fullName>
        <label>Requested Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Further Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomorrow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <inlineHelpText>Level of risk associated with the financing?</inlineHelpText>
        <label>Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shared_Benchmarks__c</fullName>
        <label>Shared Benchmarks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shared_Customer_Stories__c</fullName>
        <label>Shared Customer Stories?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timeframe_Notes__c</fullName>
        <inlineHelpText>Please provide any additional information about the time-frame of this request</inlineHelpText>
        <label>Timeframe Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Requirement__c</fullName>
        <inlineHelpText>If the title of the customer delivering the reference is important/essential, enter in the details here</inlineHelpText>
        <label>Title Requirement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Support__c</fullName>
        <label>Type of Support?</label>
        <picklist>
            <picklistValues>
                <fullName>Internal - Guidance on Support/Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Facing - Methodology Guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Tools and Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Business Case (Large, Complex, Strategic)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_would_you_like_to_accomplish__c</fullName>
        <label>What would you like to accomplish?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Where_are_you_in_the_process__c</fullName>
        <label>Where are you in the process?</label>
        <picklist>
            <picklistValues>
                <fullName>Early: Oppty/Business Case Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Introduced Customer to HP Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Questionnaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalizing ROI/TCO Spreadsheets Inputs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Deal Support Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>DS #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Support Requests</pluralLabel>
    <recordTypes>
        <fullName>Business_Case_ROI_TCO</fullName>
        <active>true</active>
        <description>Business Case (ROI/TCO)</description>
        <label>Business Case (ROI/TCO)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitive_War_Room</fullName>
        <active>true</active>
        <description>Competitive War Room</description>
        <label>Competitive War Room</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financing_Team_Request</fullName>
        <active>true</active>
        <description>Financing Team Request</description>
        <label>Financing Team Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reference_Request</fullName>
        <active>true</active>
        <description>Reference Request</description>
        <label>Reference Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>